--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,4 +5,6 @@
     flex-direction:column;
     justify-content: center;
     align-self:center;
+    align-items: center;
+    color: blanchedalmond;
 }
