--- a/src/styles/Forum.css
+++ b/src/styles/Forum.css
@@ -25,8 +25,7 @@
   flex-grow: 5;
   flex-basis: 100%;
 }
-.animated {
-  -webkit-transition: height 0.2s;
-  -moz-transition: height 0.2s;
-  transition: height 0.2s;
+.upbutton {
+  textalign: "center";
+  display: "flex";
 }
