--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -1,11 +1,11 @@
 .fnt {
   font-family: "Montserrat";
   font-size: 20px;
-  font-weight: lighter;
 }
 .fnt-abhaya {
   font-family: "Abhaya Libre";
   font-size: xx-large;
+  color: black;
 }
 .fnt-alegre {
   font-family: "Alegreya SC";
