--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -65,10 +65,11 @@ video.post-video,
   min-width: 0;
 }
 
-img.profile-photo-md {
-  height: 50px;
-  width: 50px;
+img.profile-photo {
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
+  margin-right: 0.25cm;
 }
 
 img.profile-photo-sm {
