--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -12,9 +12,9 @@ p {
   color: #999;
 }
 
-a,
-a:hover,
-a:focus {
+button,
+button:hover,
+button:focus {
   color: inherit;
   text-decoration: none;
   transition: all 0.3s;
@@ -29,13 +29,13 @@ a:focus {
   max-width: 20%;
   min-height: 100%;
   background: #bdbdbd;
-  color: #fff;
+  color: black;
   transition: all 0.3s;
   position: "fixed";
   top: 0;
   left: 0;
   position: fixed;
-  margin-top: 7%;
+  margin-top: 5.9%;
 }
 
 .sidebar.active {
@@ -57,24 +57,24 @@ a:focus {
   padding: 10px;
 }
 
-.sidebar ul li a {
+.sidebar ul li button {
   padding: 10px;
   font-size: 1.1em;
   display: block;
 }
 
-.sidebar ul li a:hover {
+.sidebar ul li button:hover {
   color: #373737;
   background: #fff;
 }
 
-.sidebar ul li.active > a,
+.sidebar ul li.active > button,
 a[aria-expanded="true"] {
   color: #fff;
   background: #373737;
 }
 
-ul ul a {
+ul ul button {
   font-size: 0.9em !important;
   padding-left: 30px !important;
   background: black;
@@ -84,7 +84,7 @@ ul.CTAs {
   padding: 20px;
 }
 
-ul.CTAs a {
+ul.CTAs button {
   text-align: center;
   font-size: 0.9em !important;
   display: block;
@@ -104,14 +104,28 @@ ul.CTAs a {
   overflow: hidden;
   position: fixed;
 } */
-#content {
+.content {
   width: 100%;
   padding-left: 30vw;
   margin: auto;
   /* min-height: 100vh; */
   transition: all 0.3s;
 }
+.book-content {
+  position: relative;
+  width: 80%;
+  /* background-color: aqua; */
+  padding-left: 1vw;
+  margin: 3% 0% auto 20%; /*top right bottom left*/
 
+  /* min-height: 100vh; */
+  transition: all 0.3s;
+}
+.right_header {
+  position: absolute;
+  margin-left: 0px;
+  margin-top: 0px;
+}
 /* ---------------------------------------------------
     MEDIAQUERIES
 ----------------------------------------------------- */
