--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -9,9 +9,10 @@ body {
 .post-content {
   background: #f8f8f8;
   border-radius: 4px;
-  width: 100%;
+  width: 80%;
   border: 1px solid #f1f2f2;
   margin-bottom: 20px;
+  margin-top: 60px;
   overflow: hidden;
   position: relative;
 }
