--- a/src/styles/Forum.css
+++ b/src/styles/Forum.css
@@ -29,3 +29,12 @@
   textalign: "center";
   display: "flex";
 }
+/* Show red borders when filled, but invalid */
+input[data-state="invalid"] {
+  border-color: hsl(0, 76%, 50%);
+}
+
+/* Show green borders when valid */
+input[data-state="valid"] {
+  border-color: hsl(120, 76%, 50%);
+}
