--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,10 @@
 .footer-container {
-    background-color: #242424;
-    padding: 4rem 0 2rem 0;
-    display:flex;
-    flex-direction:column;
-    justify-content: center;
-    align-self:center;
-    align-items: center;
-    color: blanchedalmond;
+  /* background-color: #242424; */
+  /* padding: 4rem 0 2rem 0; */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-self: flex-end;
+  align-items: flex-end;
+  color: blanchedalmond;
 }
