--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,27 +2,28 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "PT Sans", sans-serif;
+  /* font-family: 'PT Sans', sans-serif; */
 }
-
 .home,
 .services,
 .products,
 .sign-up {
   display: flex;
-  height: 90vh;
+  height: 95vh;
   align-items: center;
   justify-content: center;
-  font-size: 3rem;
+  /* font-size: 3rem; */
 }
 
 .services {
   background-image: url("../images/img-2.jpg");
   background-position: center;
   background-size: cover;
+  margin-top: 5.5%;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  background-color: skyblue;
+  /* font-size: 100px; */
 }
 
 .products {
@@ -31,7 +32,7 @@
   background-size: fill;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  /* font-size: 100px; */
 }
 
 .sign-up {
@@ -40,5 +41,5 @@
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  /* font-size: 100px; */
 }
