--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,14 +1,15 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 body {
   font-family: "Poppins", sans-serif;
-  background: #fafafa;
+
+  /* background: #fafafa; */
 }
 
 p {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
   line-height: 1.7em;
-  color: #999;
+  color: black;
 }
 
 button,
@@ -27,14 +28,21 @@ button:focus {
   min-width: 20%;
   max-width: 20%;
   min-height: 100%;
-  background: #bdbdbd;
+  /* background: #bdbdbd; */
   color: black;
   transition: all 0.3s;
-  position: "fixed";
+  position: fixed;
   top: 0;
   left: 0;
   position: fixed;
   margin-top: 5.8%;
+  border-top: 0ch;
+  border-right: 0ch;
+  border-bottom: 0ch;
+  border-right: 2 px;
+  border-color: black;
+  border-style: groove;
+  background: url("../images/sidebar.jpg") no-repeat scroll left top transparent;
 }
 
 .sidebar.active {
@@ -43,34 +51,41 @@ button:focus {
 
 .sidebar .sidebar-header {
   padding: 20px;
-  background: #8d8d8d;
+  background: white;
+  opacity: 0.6;
 }
 
 .sidebar ul.components {
   padding: 20px 0;
+  opacity: 0.8;
   /* border-bottom: 1px solid #47748b; */
 }
 
 .sidebar ul p {
-  color: #fff;
+  /* color: #fff; */
+  opacity: 0.4;
   padding: 10px;
 }
 
 .sidebar ul li button {
   padding: 10px;
+  background-color: white;
+
   font-size: 1.1em;
-  display: block;
+  /* display: block; */
 }
 
 .sidebar ul li button:hover {
-  color: #373737;
-  background: #fff;
+  color: black;
+  /* background: #fff; */
+  opacity: 0.4;
 }
 
 .sidebar ul li.active > button,
 a[aria-expanded="true"] {
-  color: #fff;
-  background: #373737;
+  /* color: #fff; */
+  /* background: #373737; */
+  opacity: 0.4;
 }
 
 ul ul button {
