--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,7 +9,7 @@
 .products,
 .sign-up {
   display: flex;
-  height: 95vh;
+  height: 100%;
   align-items: center;
   justify-content: center;
   /* font-size: 3rem; */
@@ -19,7 +19,6 @@
   background-image: url("../images/img-2.jpg");
   background-position: center;
   background-size: cover;
-  margin-top: 5.5%;
   background-repeat: no-repeat;
   color: #fff;
   background-color: skyblue;
