--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,6 +1,6 @@
 .body {
 }
-.appStyle {
+/* .appStyle {
   display: flex;
   flex-wrap: wrap;
   position: flex;
@@ -9,7 +9,7 @@
   align-items: center;
   margin-top: 8%;
   background: url("../images/background.jpg");
-}
+} */
 .formStyle {
   margin: auto;
   padding: 10px;
@@ -41,4 +41,7 @@
   font-size: 15px;
   display: block;
   align: center;
+}
+.regbody {
+  /* background-color: rgb(0, 0, 0, 0.4); */
 }
