--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -28,21 +28,19 @@ button:focus {
   min-width: 20%;
   max-width: 20%;
   min-height: 100%;
+  background-color: black;
   /* background: #bdbdbd; */
   color: black;
   transition: all 0.3s;
   position: fixed;
-  top: 0;
   left: 0;
+  top: 0;
   position: fixed;
-  margin-top: 5.8%;
   border-top: 0ch;
   border-right: 0ch;
   border-bottom: 0ch;
-  border-right: 2 px;
   border-color: black;
   border-style: groove;
-  background: url("../images/sidebar.jpg") no-repeat scroll left top transparent;
 }
 
 .sidebar.active {
