--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,6 +6,7 @@
   align-items: left;
   /* font-size: 20px; */
   position: fixed !important;
+  z-index: 1;
   width: 100vw;
   top: 0;
   left: 0;
