--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -9,7 +9,11 @@ body {
   font-weight: 100;
   font-size: medium;
 }
-
+.subs {
+  font-family: "Poppins", sans-serif;
+  font-style: italic;
+  font-size: 10px;
+}
 .fnt {
   font-family: "Montserrat";
   font-size: 20px;
