--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -9,6 +9,10 @@ body {
   font-weight: 100;
   font-size: medium;
 }
+.popup {
+  font-family: "Poppins", sans-serif;
+  font-size: x-small;
+}
 .subs {
   font-family: "Poppins", sans-serif;
   font-style: italic;
