--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,4 +1,4 @@
-:root{
+/* :root{
     --primary: #fff;
 }
 
@@ -10,13 +10,13 @@
  cursor: pointer;
 }
 
-.btn--primary{
+/* .btn--primary{
     background-color:  var(--primary);
     color: #242424;
     border: 1px solid var(--primary);
-}
+} */
 
-.btn--outline {
+/* .btn--outline {
     background-color: transparent;
     color:#fff;
     padding: 8px 20px;
@@ -39,4 +39,4 @@
     color: #242424;
     transition: all 0.3s ease-out;
     transition: 250ms;
-}
+}  */
