--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -9,7 +9,7 @@ video {
 .hero-container {
   /*background:  url('../images/img-home.jpg') center center/cover
     no-repeat;*/
-  height: 90vh;
+  height: 85vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -29,8 +29,8 @@ video {
   margin-top: 8px;
   color: #fff;
   font-size: 32px;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  /* font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif; */
 }
 
 .hero-btns {
