--- a/src/styles/AdminLibrary.css
+++ b/src/styles/AdminLibrary.css
@@ -8,9 +8,9 @@
   margin-top: 50px;
 }
 
-.btn:hover {
+/* .btn:hover {
   color: rgb(8, 7, 7);
-}
+} */
 
 .input-text:focus {
   box-shadow: 0px 0px 0px;
