--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* background-image: "../images/img-5.jpg"; */
   /* font-family: 'PT Sans', sans-serif; */
 }
 .home,
