--- a/src/styles/Booklist.css
+++ b/src/styles/Booklist.css
@@ -3,17 +3,19 @@ body {
   font-weight: 300;
   line-height: 1.7em;
 }
-.list-group {
-  width: 800px !important;
-}
+/* overwriting in user profile */
 
-.list-group-item {
+/* .list-group {
+  width: 800px !important;
+} */
+
+/* .list-group-item {
   margin-top: 10px;
   border-radius: none;
   background: #9e9e9e;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-}
+} */
 
 .list-group-item:hover {
   transform: scaleX(1.1);
