--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -1,4 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+@import "https://fonts.googleapis.com/css?family=Walter+Turncoat:300,400,500,600,700";
+@import "https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,600,700";
 body {
   font-family: "Poppins", sans-serif;
 
@@ -19,8 +21,28 @@ body {
   font-size: 10px;
 }
 .fnt {
-  font-family: "Montserrat";
+  font-family: "Poppins", sans-serif;
   font-size: 20px;
+}
+.fnt-bookname {
+  font-family: "Walter Turncoat";
+  font-size: 20px;
+}
+.fnt-author {
+  font-family: "Ubuntu";
+  font-size: 18px;
+}
+.by {
+  font-size: 16px;
+  font-weight: bold;
+}
+.fnt-description {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+}
+.fnt-user {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
 }
 .fnt-abhaya {
   font-family: "Abhaya Libre";
