--- a/src/styles/UserProfile.css
+++ b/src/styles/UserProfile.css
@@ -9,7 +9,7 @@ body {
   margin-bottom: 20px;
 }
 .grading {
-  background-image: linear-gradient(45deg, rgba(25, 135, 84, 0.6), white);
+  background-image: linear-gradient(45deg, rgba(25, 135, 84), white);
   font-size: 15px;
 }
 .user-box img {
@@ -25,7 +25,7 @@ body {
 .list-group-item {
   margin-top: 10px;
   /* border-radius: none; */
-  background: rgba(25, 135, 84, 0.6);
+  background: rgb(25, 135, 84);
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
