--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -17,7 +17,7 @@ body {
 }
 .subs {
   font-family: "Poppins", sans-serif;
-  font-style: italic;
+  /* font-style: italic; */
   font-size: 10px;
 }
 .fnt {
@@ -31,6 +31,9 @@ body {
 .fnt-author {
   font-family: "Ubuntu";
   font-size: 18px;
+}
+.fnt-poster {
+  font-family: "Ubuntu";
 }
 .by {
   font-size: 16px;
