--- a/src/styles/AdminLibrary.css
+++ b/src/styles/AdminLibrary.css
@@ -4,9 +4,10 @@
   background-repeat: repeat;
   font-size: 100px;
 }
-.container {
+/* overwriting in forum */
+/* .container {
   margin-top: 50px;
-}
+} */
 
 /* .btn:hover {
   color: rgb(8, 7, 7);
