--- a/src/styles/Booklist.css
+++ b/src/styles/Booklist.css
@@ -3,6 +3,9 @@ body {
   font-weight: 300;
   line-height: 1.7em;
 }
+.img {
+  background-image: ;
+}
 /* overwriting in user profile */
 
 /* .list-group {
