--- a/src/styles/Library.css
+++ b/src/styles/Library.css
@@ -1,9 +1,20 @@
+.card-img {
+  background: url("../images/pexels-pixabay-159866.jpg");
+}
 .list {
   display: grid;
   margin: 20px 0px 50px 20px;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 1fr;
   grid-gap: 5rem;
+}
+.list-forum {
+  width: 80%;
+  display: grid;
+  margin: 0px 0px 0px 210px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
+  grid-gap: 2.5rem;
 }
 .book-links {
   color: rgb(25, 135, 84);
