--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -32,6 +32,7 @@ p {
   border-bottom: 0ch;
   padding-right: 12vw;
   text-align: center;
+  z-index: 1;
   /* border-color: black;
   border-style: groove; */
 }
@@ -93,7 +94,7 @@ p {
 }
 .content {
   position: relative;
-  width: 100%;
+  /* width: 100%; */
   padding-top: 2%;
   /* padding-left: 20%; */
   margin-left: 205px;
