fixed #83 and added post edit-delete option

--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -142,3 +142,13 @@ p {
     display: none;
   }
 }
+.float-container {
+  align-items: flex-end;
+}
+
+.float-child1 {
+  float: right;
+}
+.float-child2 {
+  float: left;
+}
