--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,16 +1,16 @@
-/* :root{
-    --primary: #fff;
+:root {
+  --primary: #fff;
 }
 
 .btn {
- padding: 8px 20px;
- border-radius: 4px;
- outline: none;
- border: none;
- cursor: pointer;
+  padding: 8px 20px;
+  border-radius: 4px;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
-/* .btn--primary{
+/* /* .btn--primary{
     background-color:  var(--primary);
     color: #242424;
     border: 1px solid var(--primary);
