--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,114 +1,3 @@
-* {
-  margin-top: -10px;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  /*font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-    'Lucida Sans', Arial, sans-serif;*/
-}
-
-.mainContainer {
-  margin-top: -40px;
-  margin-left: -80px;
-  margin-right: -75px;
-}
-
-section {
-  height: 130vh;
-  /*position: sticky;*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.one {
-  background: #0c0d0d;
-}
-
-.two {
-  /*background: #9ade6e;*/
-  /* background: #258a4c;*/
-  /*background: #599c6a;*/
-  background: #3e8250;
-}
-
-.three {
-  background: #f5cd03;
-}
-
-.four {
-  background: #420208;
-}
-.five {
-  background: #3e8250;
-}
-
-.hero-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  height: 200vh;
-  padding: 0.01rem calc((100vw - 1300px) / 2);
-}
-
-.hero-column-left {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  color: #000;
-  padding: 0rem 2rem;
-}
-
-.hero-column-left h1 {
-  margin-bottom: 1rem;
-  font-size: 2rem;
-  font-style: italic;
-}
-
-.hero-column-left p {
-  margin-bottom: 1rem;
-  font-size: 2rem;
-  line-height: 1.1;
-}
-
-.hero-button {
-  padding: 1rem 3rem;
-  font-size: 1rem;
-  border: none;
-  background: #f5cd03;
-  color: #0c0d0d;
-  cursor: pointer;
-  align-self: center;
-  border-radius: 50px;
-}
-
-.hero-anchor {
-  align-self: center;
-}
-
-.hero-column-right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem 2rem;
-}
-
-.hero-image {
-  width: 100%;
-  height: 100%;
-  max-width: 7000px;
-  max-height: 750px;
-}
-
-.hero-text {
-  color: #fff;
-}
-
-@media screen and (max-width: 768px) {
-  .hero-container {
-    grid-template-columns: 1fr;
-  }
-}
 video {
   object-fit: cover;
   width: 100%;
@@ -118,9 +7,7 @@ video {
 }
 
 .hero-container {
-  /*background:  url('../images/img-home.jpg') center center/cover
-    no-repeat;*/
-  height: 80vh;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -133,49 +20,13 @@ video {
 .hero-container > h1 {
   color: #fff;
   font-size: 100px;
-  margin-top: -100px;
 }
 
 .hero-container > p {
-  margin-top: 8px;
   color: #fff;
-  font-size: 32px;
   /* font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif; */
 }
-
-.hero-btns {
-  margin-top: 32px;
-}
-
-.hero-btns .btn {
-  margin: 6px;
-}
-
-.fa-play-circle {
-  margin-left: 4px;
-}
-
-@media screen and (max-width: 960px) {
-  .hero-container > h1 {
-    font-size: 70px;
-    margin-top: -150px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .hero-container > h1 {
-    font-size: 50px;
-    margin-top: -100px;
-  }
-  .hero-container > p {
-    font-size: 30px;
-  }
-  .btn-mobile {
-    display: block;
-    text-decoration: none;
-  }
-  .btn {
-    width: 100%;
-  }
+.bdr {
+  border-left: 5px solid green;
 }
