--- a/src/styles/Fonts.css
+++ b/src/styles/Fonts.css
@@ -1,6 +1,9 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 @import "https://fonts.googleapis.com/css?family=Walter+Turncoat:300,400,500,600,700";
 @import "https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,600,700";
+@import "https://fonts.googleapis.com/css?family=Pacifico:300,400,500,600,700";
+@import "https://fonts.googleapis.com/css?family=Lobster+Two";
+@import "https://fonts.googleapis.com/css?family=Space+Mono";
 body {
   font-family: "Poppins", sans-serif;
 
@@ -72,6 +75,22 @@ body {
 
 .fnt-sheeva {
   font-family: "Montserrat";
-  font-size: 50px;
+  font-size: 0px;
   font-weight: 1000;
+}
+.fnt-home {
+  font-family: "Poppins", sans-serif;
+  font-size: 50px;
+}
+.fnt-unilib {
+  font-family: "Lobster Two";
+  font-size: 100px;
+}
+.fnt-getstart {
+  font-family: "Poppins", sans-serif;
+  font-size: 25px;
+}
+.fnt-welcome {
+  font-family: "Space Mono";
+  font-size: 20px;
 }
