--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -16,8 +16,7 @@ video {
   box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.5);
   object-fit: contain;
 }
-
-.hero-container > h1 {
+. .hero-container > h1 {
   color: #fff;
   font-size: 100px;
 }
@@ -29,4 +28,11 @@ video {
 }
 .bdr {
   border-left: 5px solid green;
+}
+.bg-success9 {
+  --bs-bg-opacity: 0.4;
+  background-color: rgba(
+    var(--bs-success-rgb),
+    var(--bs-bg-opacity)
+  ) !important;
 }
