--- a/src/styles/Library.css
+++ b/src/styles/Library.css
@@ -10,7 +10,13 @@
 .list-forum {
   width: 80%;
   display: grid;
-
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 1fr;
+  grid-gap: 2.5rem;
+}
+.list-user {
+  width: 100%;
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 1fr;
   grid-gap: 2.5rem;
